--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -29,6 +29,7 @@ $header-color: white
 $header-dropdown-background: white
 $header-dropdown-color: $main-color
 $header-logo-height: 42px !important
+$header-dropdown-full: true
 
 $breadcrumb-color: rgba(white, .8)
 
