--- a/layouts/partials/programs/index.html
+++ b/layouts/partials/programs/index.html
@@ -1,7 +1,7 @@
 <div class="container">
   {{ partial "programs/chapo.html" .Params.description_short }}
 </div>
-{{ partial "blocks/list.html" .Params.blocks }}
+{{ partial "blocks/list.html" . }}
 <div class="container">
   {{ partial "diplomas/diplomas-select.html" . }}
   {{ $programs := where .Site.Pages "Section" "programs" }}
