--- a/layouts/persons/list.html
+++ b/layouts/persons/list.html
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-      {{ partial "blocks/list.html" .Params.blocks }}
+      {{ partial "blocks/list.html" . }}
     </div>
   {{ end }}
 
