--- a/layouts/partials/programs/show.html
+++ b/layouts/partials/programs/show.html
@@ -19,7 +19,7 @@
     {{- partial "programs/abstract.html" .Params.presentation -}}
   </div>
   {{- partial "programs/presentation.html" . -}}
-  {{- partial "blocks/list.html" .Params.blocks -}}
+  {{- partial "blocks/list.html" . -}}
   {{- partial "programs/children.html" .Pages -}}
   {{- partial "programs/pedagogy.html" . -}}
   {{- partial "programs/results.html" . -}}
