migrating to aaa wip

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -14,13 +14,27 @@ $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helve
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
 $h5-size: px2rem(16)
-$h2-size-md: px2rem(50)
+$h2-size-md: px2rem(40)
 $h3-size-md: px2rem(40)
 $h4-size-md: px2rem(28)
 $h5-size-md: px2rem(24)
 $h6-size-md: px2rem(22)
 
 $h1-weight: bold
+
+// Spacing
+$spacing0: px2rem(12)
+$spacing1: px2rem(24)
+$spacing2: px2rem(48)
+$spacing3: px2rem(64)
+$spacing4: px2rem(128)
+$spacing5: px2rem(256)
+
+
+
+// Sections
+$article-title-size: px2rem(18)
+$article-title-size-md: $article-title-size
 
 $hero-background-color: $site-color
 $header-background: $site-color
@@ -54,6 +68,9 @@ $block-timeline-horizontal-background: $institute-color
 
 // Key figures
 $block-key_figures-number-font-size: px2rem(50)
+
+// Block pages
+$block-pages-card-background: #f8f9fa
 
 // Person
 $persons-avatar-background-color: #F5F5F5
