--- a/assets/sass/blocks/key_figures.sass
+++ b/assets/sass/blocks/key_figures.sass
@@ -1,5 +1,8 @@
 .block-key_figures
+    li
+        margin-bottom: $spacing2
     dl 
         dt 
+            font-weight: bold
             strong
                 font-weight: 400
