--- a/assets/sass/design-system/footer.sass
+++ b/assets/sass/design-system/footer.sass
@@ -39,7 +39,17 @@ footer[role="contentinfo"]
                 -o-transform: translateX(-50%)
                 transform: translateX(-50%)
                 width: 100vw
-        
+
+            ul,
+            .nav-legal,
+            .nav-social
+                display: flex
+                flex-direction: column
+            .nav-social
+                li
+                    width: 100%
+                    text-align: right
+            
                 
         ul,
         .nav-legal
