--- a/assets/sass/design-system/hero.sass
+++ b/assets/sass/design-system/hero.sass
@@ -1,6 +1,7 @@
 body:not(.page__home)
     .hero
         flex-direction: column
+        min-height: calc(548px + var(--header-height))
         .title-avatar
             align-items: flex-start
             @include media-breakpoint-down(md)
