--- a/assets/sass/design-system/pagination.sass
+++ b/assets/sass/design-system/pagination.sass
@@ -1,5 +1,5 @@
 .pagination
-    margin-bottom: #{$grid-gutter * 2.5}
+    margin-bottom: calc($grid-gutter * 2.5)
     li
         a,
         span
