--- a/assets/sass/design-system/typography.sass
+++ b/assets/sass/design-system/typography.sass
@@ -104,6 +104,9 @@ p, li
         font-size: $h3-size
         line-height: 110%
         @include media-breakpoint-up(md)
+            font-size: px2rem(50)
+            line-height: 110%
+        @include media-breakpoint-up(xl)
             font-size: $h1-size-md
             line-height: 130%
         @include in-page-with-aside
