--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -10,6 +10,8 @@
                     color: $post-color
         time 
             color: #6c757d
+            font-size: px2rem(18)
+            margin-top: 10px
 
 
 .table-infos
