--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -11,6 +11,7 @@
 @import "design-system/footer"
 @import "design-system/header"
 @import "design-system/hero"
+@import "design-system/nav"
 @import "design-system/pagination"
 @import "design-system/typography"
 @import "sections/home"
