--- a/assets/sass/sections/home.sass
+++ b/assets/sass/sections/home.sass
@@ -1,9 +1,9 @@
 .page__home
     .hero
+        align-items: start
         margin-bottom: $spacing3
         min-height: auto
         overflow: visible
-        align-items: start
         @include media-breakpoint-down(md)
             padding-top: px2rem(140)
         @include media-breakpoint-up(xl)
@@ -12,7 +12,7 @@
             min-height: $hero-height-md
 
         .container
-            position: static
+            position: static // relative pour l'image ?
             > div:first-of-type:not(.title-avatar)
                 position: relative
                 z-index: 1
@@ -21,6 +21,8 @@
                     padding-right: calc(#{$grid-gutter} / 2)
 
         h1
+            @include media-breakpoint-down(lg)
+                width: 75%
             @media (min-width: 1200px) and (max-width: 1360px)
                 font-size: px2rem(50)
 
@@ -28,11 +30,11 @@
             @include media-breakpoint-down(lg)
                 aspect-ratio: 8/6
                 display: block
-                margin-bottom: calc(#{$grid-gutter} / -2)
+                margin-bottom: calc(#{$grid-gutter} / -.9)
             @include media-breakpoint-down(md)
-                margin-bottom: 0
-                margin-left: - $grid-gutter
-                margin-right: - $grid-gutter
+                margin-bottom: calc(#{$grid-gutter} / -1)
+                margin-left: - $spacing0
+                margin-right: - $spacing0
             @include media-breakpoint-up(lg)
                 width: 82.2%
             @include media-breakpoint-up(lg)
