--- a/assets/old_sass/_theme/persons/_pages.sass
+++ b/assets/old_sass/_theme/persons/_pages.sass
@@ -2,7 +2,7 @@
 .authors__taxonomy,
 .teachers__taxonomy
     main.page-with-blocks
-        padding-bottom: $grid-gutter-width * 2.5
+        padding-bottom: calc(#{$grid-gutter-width} * 2.5)
         .hero
             margin-bottom: 4rem
             @include media-breakpoint-up(md)
