--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -23,7 +23,7 @@ $h6-size-md: px2rem(22)
 $h1-weight: bold
 
 // Spacing
-$spacing0: px2rem(12)
+$spacing0: px2rem(16)
 $spacing1: px2rem(24)
 $spacing2: px2rem(48)
 $spacing3: px2rem(64)
@@ -43,7 +43,7 @@ $header-color: white
 $header-dropdown-background: white
 $header-dropdown-color: $main-color
 $header-logo-height: 42px !important
-$header-dropdown-full: true
+$header-dropdown-full: false
 
 $breadcrumb-color: rgba(white, .8)
 
