--- a/assets/sass/sections/persons.sass
+++ b/assets/sass/sections/persons.sass
@@ -15,7 +15,7 @@
             @include media-breakpoint-up(md)
                 margin-bottom: $spacing4
         section
-            margin-top: calc($spacing1 * 3)
+            margin-top: calc(#{$spacing1} * 3)
             @include media-breakpoint-up(md)
                 margin-top: 0
             .top
