--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -17,5 +17,5 @@
 .table-infos
     th
         color: #6c757d
-        padding-top: $spacing2 / 3
-        padding-bottom: $spacing2 / 3
+        padding-top: calc(#{$spacing2} / 3)
+        padding-bottom: calc(#{$spacing2} / 3)
