--- a/assets/sass/blocks/call_to_action.sass
+++ b/assets/sass/blocks/call_to_action.sass
@@ -9,5 +9,5 @@
                 a
                     font-size: $h6-size
                     margin-top: 1rem
-                    padding-bottom: $spacing0 / 2
-                    padding-top: $spacing0 / 2
+                    padding-bottom: calc(#{$spacing0} / 2)
+                    padding-top: calc(#{$spacing0} / 2)
