--- a/assets/sass/sections/home.sass
+++ b/assets/sass/sections/home.sass
@@ -21,8 +21,6 @@
                     padding-right: calc(#{$grid-gutter} / 2)
 
         h1
-            @include media-breakpoint-down(lg)
-                width: 75%
             @media (min-width: 1200px) and (max-width: 1360px)
                 font-size: px2rem(50)
 
@@ -33,8 +31,8 @@
                 margin-bottom: calc(#{$grid-gutter} / -.9)
             @include media-breakpoint-down(md)
                 margin-bottom: calc(#{$grid-gutter} / -1)
-                margin-left: - $spacing0
-                margin-right: - $spacing0
+                margin-left: calc(-#{$grid-gutter-sm} * 0.5)
+                margin-right: calc(-#{$grid-gutter-sm} * 0.5)
             @include media-breakpoint-up(lg)
                 width: 82.2%
             @include media-breakpoint-up(lg)
