--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -30,8 +30,6 @@ $spacing3: px2rem(64)
 $spacing4: px2rem(128)
 $spacing5: px2rem(256)
 
-
-
 // Sections
 $article-title-size: px2rem(18)
 $article-title-size-md: $article-title-size
@@ -43,7 +41,7 @@ $header-color: white
 $header-dropdown-background: white
 $header-dropdown-color: $main-color
 $header-logo-height: 42px !important
-$header-dropdown-full: false
+$header-dropdown-full: true
 
 $breadcrumb-color: rgba(white, .8)
 
@@ -52,7 +50,7 @@ $footer-background-color: $main-color
 
 // Hero
 $hero-height: 300px
-$hero-height-md: calc(650px - var(--header-height))
+$hero-height-md: 650px
 
 $toc-color: #6c757d
 $toc-active-color: $institute-color
