--- a/assets/sass/blocks/pages.sass
+++ b/assets/sass/blocks/pages.sass
@@ -9,7 +9,7 @@
                 margin-top: $spacing2
         .pages
             margin-bottom: 0
-            margin-top: 10px
+            // margin-top: 10px
             .page
                 .title
                     font-family: $body-font-family
