--- a/assets/sass/blocks/pages.sass
+++ b/assets/sass/blocks/pages.sass
@@ -4,17 +4,15 @@
             .title
                 a
                     @include icon("arrow-right", after)
-            p:nth-child(2)
+            p
                 margin-bottom: $spacing1
                 margin-top: $spacing2
         .pages
             margin-bottom: 0
-            // margin-top: 10px
             .page
                 .title
                     font-family: $body-font-family
                     font-size: px2rem(18)
-                    margin-bottom: 0
     &--cards
         .pages
             @include media-breakpoint-down(lg)
