--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -13,6 +13,11 @@
             font-size: px2rem(18)
             margin-top: 10px
 
+.post
+    .media
+        aspect-ratio: auto
+        img
+            aspect-ratio: auto
 
 .table-infos
     th
