--- a/assets/sass/design-system/footer.sass
+++ b/assets/sass/design-system/footer.sass
@@ -1,4 +1,4 @@
-footer[role="contentinfo"] 
+footer[role="contentinfo"]
     a
         @include link($footer-color)
     [class^="nav-"]
@@ -8,24 +8,22 @@ footer[role="contentinfo"]
     p
         margin-bottom: 0
 
-@include media-breakpoint-up(md)
-    footer[role="contentinfo"] 
+    @include media-breakpoint-up(md)
         padding-bottom: 0
         .container
             .content
                 @include grid(2)
-                padding-bottom: $spacing3
+                padding-bottom: $spacing5
                 .logo img
                     height: $header-logo-height
                 div + div
                     text-align: right
-                    
+
         .complementary
             justify-content: space-between
             padding-bottom: $spacing2
-            padding-top: $spacing2   
+            padding-top: $spacing2
             position: relative
-            
             &::before
                 background-color: hsla(0,0%,100%,.3)
                 bottom: 7.5rem
@@ -56,3 +54,15 @@ footer[role="contentinfo"]
             @include list-reset
             li:not(:first-child)
                 margin-left: 0
+
+    @include media-breakpoint-up(xxl)
+        .complementary
+            .nav-level-1
+                flex-direction: row
+        nav
+            display: flex
+            align-items: center
+            small
+                &::before
+                    content: '—'
+                    margin-inline-end: 0.5em
