header programs breadcrumb

--- a/assets/sass/design-system/breadcrumb.sass
+++ b/assets/sass/design-system/breadcrumb.sass
@@ -1,5 +1,7 @@
 .breadcrumb
     li
+        font-size: px2rem(18)
+        padding: 0.3rem 0
         a,
         span
             font-size: $h4-size
