--- a/assets/sass/design-system/breadcrumb.sass
+++ b/assets/sass/design-system/breadcrumb.sass
@@ -7,3 +7,7 @@
             font-size: $h4-size
             &:hover
                 color: white
+        &:not(:first-child)
+            padding-left: px2rem(18)
+        //     &::before
+        //         content: map-get($icons, "caret-right")
