hero program title

--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -31,6 +31,8 @@ body.programs__section
             padding-top: px2rem(32)
         h1 
             width: 75%
+            @include media-breakpoint-down(md)
+                margin: 0
         > .container
             + div
                 @include media-breakpoint-down(md)
