hero program title

--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -33,6 +33,7 @@ body.programs__section
             width: 75%
             @include media-breakpoint-down(md)
                 margin: 0
+                width: unset
         > .container
             + div
                 @include media-breakpoint-down(md)
