--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -9,7 +9,7 @@
 @import "blocks/pages"
 @import "design-system/breadcrumb"
 @import "design-system/footer"
-// @import "design-system/grid"
+@import "design-system/layout"
 @import "design-system/header"
 @import "design-system/hero"
 @import "design-system/nav"
