--- a/assets/sass/design-system/layout.sass
+++ b/assets/sass/design-system/layout.sass
@@ -2,7 +2,8 @@
     .blocks:not(.blocks-chapo)
         > *
             padding-bottom: $spacing4
-    
+    .blocks > *
+        margin: unset
     .blocks > .block-with-title, 
     .blocks > :first-of-type
         > *
