--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -75,7 +75,7 @@ body.posts__page
             .lead
                 font-size: $h3-size
                 margin-bottom: $spacing2
-            .block-with-title:first-of-type
+            .block-chapter.block-with-title
                 position: relative
                 @include media-breakpoint-down(md)
                     padding-top: 1rem
@@ -102,18 +102,27 @@ body.posts__page
                 .call_to_action
                     > div
                         background-color: $post-color
-                    div + div
+                    div + div:first-child
                         a
                             background-color: #F5F5F5
+                            color: black
                             transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
                             &:hover
                                 background-color: #000
                                 color: #fff
+        .block-video 
+            iframe
+                aspect-ratio: 16/9
+                display: block
+                width: 100%
+
         &-pagination
             .container
-                padding-bottom: 0
+                margin-top: 0
             .block-content
                 padding: 0
+                ul
+                    margin: 0
     &.full-width
         .blocks
             .block-call_to_action
