Fix header color

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -38,6 +38,7 @@ $hero-background-color: $site-color
 $header-background: $site-color
 $header-sticky-background: white
 $header-color: white
+$header-sticky-color: $main-color
 $header-dropdown-background: white
 $header-dropdown-color: $main-color
 $header-logo-height: 42px !important
