--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -34,6 +34,7 @@ $spacing5: px2rem(256)
 $article-title-size: px2rem(18)
 $article-title-size-md: $article-title-size
 
+
 $hero-background-color: $site-color
 $header-background: $site-color
 $header-sticky-background: white
@@ -79,6 +80,10 @@ $posts-layout-list: true
 
 // Animations
 $arrow-ease-transition-2: cubic-bezier(0,.65,.4,1)
+
+// programs
+$program-share-font-size: px2rem(18)
+$program-share-font-size-md: px2rem(18)
 
 // TODO: 
 //      variable pour le bg du dropdown dans le dropdown-share ? (bc background: invert($hero-background-color) donne un vert pas joli)
