--- a/assets/sass/design-system/pagination.sass
+++ b/assets/sass/design-system/pagination.sass
@@ -7,7 +7,7 @@
             @include media-breakpoint-up(md)
                 font-size: px2rem(18)
         span
-            color: #6c757d
+            color: $toc-color
     &-between-pages
         li,
         li.previous,
