--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -1,6 +1,6 @@
 .posts
     .post 
-        .title
+        h1
             line-height: 130%
             a
                 font-family: $heading-font-family
@@ -9,7 +9,7 @@
                 &:hover
                     color: $post-color
         time 
-            color: #6c757d
+            color: $toc-color
             font-size: px2rem(18)
             margin-top: 10px
 
@@ -21,7 +21,7 @@
 
 .table-infos
     th
-        color: #6c757d
+        color: $toc-color
         padding-top: calc(#{$spacing2} / 3)
         padding-bottom: calc(#{$spacing2} / 3)
 
