--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -66,22 +66,21 @@ body.programs__section
                 padding-bottom: calc(#{$spacing1} / 2)
             dd
                 grid-column: 4/13
-
-    .dropdown-share
-        button
+    
+    .buttons
+        button, a[download]
             border-radius: 4px
-            font-size: 1.125rem
             min-width: px2rem(200)
-            padding: 1rem 1.25rem
-            transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
-            &:hover,
-            &:active,
-            &:focus
-                background: white
-                color: $main-color
-            &:active,
-            &:focus
-                box-shadow: 0 0 0 0.25rem rgba(white, .5)
+    //         padding: 1rem 1.25rem
+    //         transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
+    //         &:hover,
+    //         &:active,
+    //         &:focus
+    //             background: white
+    //             color: $main-color
+    //         &:active,
+    //         &:focus
+    //             box-shadow: 0 0 0 0.25rem rgba(white, .5)
 
     main 
         .content 
