--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -15,6 +15,7 @@
 @import "design-system/nav"
 @import "design-system/pagination"
 @import "design-system/typography"
+@import "sections/diplomas"
 @import "sections/home"
 @import "sections/persons"
 @import "sections/posts"
