--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -21,7 +21,8 @@
                         opacity: 1 !important
                         transform: translateX($spacing0)
 
-body.programs__section
+body.programs__section,
+.diplomas__term
     .hero
         background-color: $program-color
         display: flex
