--- a/assets/sass/design-system/hero.sass
+++ b/assets/sass/design-system/hero.sass
@@ -3,6 +3,8 @@ body:not(.page__home)
         flex-direction: column
         min-height: calc(548px + var(--header-height))
         padding-top: calc(#{$spacing1 / 2} + var(--header-height))
+        @include media-breakpoint-up(lg)
+            padding-top: calc(#{$spacing1} + var(--header-height))
         .title-avatar
             align-items: flex-start
             @include media-breakpoint-down(md)
