--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -17,6 +17,7 @@
 @import "design-system/typography"
 @import "sections/diplomas"
 @import "sections/home"
+@import "sections/pages"
 @import "sections/persons"
 @import "sections/posts"
 @import "sections/programs"
