--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -1,3 +1,13 @@
+.posts__section,
+.posts__page,
+.categories__taxonomy,
+.categories__term
+    header[role="banner"]:not(.is-sticky)
+        html:not(.has-menu-opened) &
+            background-color: $post-color
+    .hero
+        background-color: $post-color
+
 .posts
     .post 
         h1
